[gd_scene load_steps=2 format=3 uid="uid://c3q5lvo12k255"]

[ext_resource type="Script" uid="uid://b2g520j3xljvm" path="res://core/ui/DebugSavePanel.gd" id="1"]

[node name="DebugSavePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Frame" type="Panel" parent="."]
layout_mode = 0
anchor_right = 0.4
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = 640.0
offset_bottom = -16.0

[node name="VBox" type="VBoxContainer" parent="Frame"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
theme_override_constants/separation = 8

[node name="RowA" type="HBoxContainer" parent="Frame/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SeedLabel" type="Label" parent="Frame/VBox/RowA"]
layout_mode = 2
text = "Campaign Seed:"

[node name="SeedEdit" type="LineEdit" parent="Frame/VBox/RowA"]
layout_mode = 2
size_flags_horizontal = 3
text = "2730052880"

[node name="NewBtn" type="Button" parent="Frame/VBox/RowA"]
layout_mode = 2
text = "New"

[node name="SaveBtn" type="Button" parent="Frame/VBox/RowA"]
layout_mode = 2
text = "Save"

[node name="LoadBtn" type="Button" parent="Frame/VBox/RowA"]
layout_mode = 2
text = "Load"

[node name="ValidateBtn" type="Button" parent="Frame/VBox/RowA"]
layout_mode = 2
text = "Validate"

[node name="RowB" type="HBoxContainer" parent="Frame/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TelCheck" type="CheckBox" parent="Frame/VBox/RowB"]
layout_mode = 2
button_pressed = true
text = "Telemetry Enabled"

[node name="SnapBtn" type="Button" parent="Frame/VBox/RowB"]
layout_mode = 2
text = "Snapshot ▶︎"

[node name="ShowSeedsBtn" type="Button" parent="Frame/VBox/RowB"]
layout_mode = 2
text = "Show Seeds"

[node name="Out" type="RichTextLabel" parent="Frame/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Debug Save Panel[/b]"
scroll_following = true
